Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  After Zope 2.8.8

    Bugs fixed

      - Collector #2157: Expose name of broken class in SystemError raised
        from '__getstate__' of a broken instance.

  Zope 2.8.8 (2006/07/14)

    Bugs fixed

      - OFS Application: Removed deprecation warnings added in Zope 2.8.5.
        The warning period starts in Zope 2.9.0.

      - Collector #2136: Map ResourceLockedError to the correct response code.

      - Collector #2016: DemoStorage couldn't wrap base storages without
        an '_oid' attribute (fixed in ZODB 3.4.4).

      - Collector #2116: sequence.sort() did not work properly for
        locale related comparison methods

      - Collector 2077: fixed problem with ACTUAL_URL and SiteRoot

      - Collector #2073: fixed misbehaviour of OFS.Owned.changeOwnership

      - Collector #1944: HTTPRequest.resolve_url has error in raising error

      - Collector #2063: cleaned up some mess in MailHost.sendTemplate()

    Other Changes

      - Updated to ZopeX3 3.0.2.

      - Updated to ZODB 3.4.4.

      - Disabled docutils / ReST file inclusion completely, rather than
        trying to jigger it via configuration settings.

  Zope 2.8.7 (2006/05/29)

    Bugs fixed

      - Collector #1429: Fix name/value traversal of ZSQL methods (backport
        from 2.9).

      - Collector #1447: When editing content on a virtual-hosted zope,
        AcceleratedHTTPCacheManager now purges the correct URL.

      - Collector #2072: Applied patch to fix problem with overly restrictive
        __bobo_traverse__ security and tests.

      - Applied patch by Yoshinori Okuji to fix some XML export/import
        problems

      - Collector #2037: fixed broken ACTUAL_URL for '/'

      - Collector #2039: 'ZPublisher.HTTPRequest.HTTPRequest._authUserPW'